syntax = "proto3";

package proto;

service GreetingServer {
    rpc Greeting(GreetingRequest) returns (GreetingResponse) {}
}

message GreetingRequest {
  string name = 1;
}

message GreetingResponse {
    string message = 1;
}
